--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
         <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
         <maven.assembly.plugin.version>3.1.1</maven.assembly.plugin.version>
+        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 
         <testng.version>7.4.0</testng.version>
     </properties>
@@ -35,6 +36,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.plugin.version}</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compiler.plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
